[project]
name = "langgraph-react-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=1.2.15",
    "langchain-anthropic>=1.4.0",
    "langchain-openai>=1.1.13",
    "langchain-tavily>=0.2.17",
    "langgraph>=1.1.6",
    "python-dotenv>=1.2.2",
]
